--- a/Autobar v02/Base.lproj/Main.storyboard
+++ b/Autobar v02/Base.lproj/Main.storyboard
@@ -64,6 +64,16 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gad-Ni-I7v">
+                                <rect key="frame" x="34" y="281" width="81" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="0d9-Eu-hLg"/>
+                                    <constraint firstAttribute="width" constant="81" id="RsN-c3-oN7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="myLabel" contentHorizontalAlignment="center" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CzP-H4-ZEZ">
                                 <rect key="frame" x="26" y="131" width="125" height="149"/>
                                 <constraints>
@@ -77,12 +87,18 @@
                                     <action selector="button1Press:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="htb-Nq-sea"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gad-Ni-I7v">
-                                <rect key="frame" x="31" y="281" width="80" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bXy-D1-7Ep">
+                                <rect key="frame" x="0.0" y="335" width="600" height="183"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="600" id="GmJ-wf-5Pm"/>
+                                    <constraint firstAttribute="height" constant="128" id="lzx-Uo-TX3"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="GmJ-wf-5Pm"/>
+                                    </mask>
+                                </variation>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -91,8 +107,10 @@
                             <constraint firstItem="11q-je-ZcS" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="6kI-Il-1o6"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ocO-vz-ole" secondAttribute="trailing" constant="-16" id="72Y-Cj-TAK"/>
                             <constraint firstItem="RVW-pq-Jg7" firstAttribute="width" secondItem="7wB-G0-mHJ" secondAttribute="width" id="B5K-uz-5Il"/>
+                            <constraint firstItem="bXy-D1-7Ep" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="Hl2-uz-g1b"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="ocO-vz-ole" secondAttribute="bottom" id="J42-sD-NnV"/>
                             <constraint firstItem="RVW-pq-Jg7" firstAttribute="width" secondItem="11q-je-ZcS" secondAttribute="width" id="NVE-kE-qej"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bXy-D1-7Ep" secondAttribute="trailing" id="O7q-Yy-q4H"/>
                             <constraint firstItem="RVW-pq-Jg7" firstAttribute="leading" secondItem="11q-je-ZcS" secondAttribute="trailing" constant="1" id="Rpc-oE-WzE"/>
                             <constraint firstItem="1ja-aG-HWl" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" constant="16" id="Taw-CD-PJw"/>
                             <constraint firstItem="1ja-aG-HWl" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="YAV-GB-udR"/>
@@ -100,14 +118,18 @@
                             <constraint firstItem="CzP-H4-ZEZ" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="10" id="drS-VE-kTE"/>
                             <constraint firstItem="RVW-pq-Jg7" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="jP0-UM-owp"/>
                             <constraint firstItem="ocO-vz-ole" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="oX3-Fr-zSg"/>
+                            <constraint firstItem="gad-Ni-I7v" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="18" id="oim-kR-tUc"/>
                             <constraint firstItem="1ja-aG-HWl" firstAttribute="leading" secondItem="7wB-G0-mHJ" secondAttribute="trailing" constant="1" id="p5K-cG-k2s"/>
+                            <constraint firstItem="gad-Ni-I7v" firstAttribute="top" secondItem="CzP-H4-ZEZ" secondAttribute="bottom" constant="1" id="pDU-Zc-xQD"/>
                             <constraint firstItem="7wB-G0-mHJ" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="pLW-Ve-Df4"/>
+                            <constraint firstItem="bXy-D1-7Ep" firstAttribute="top" secondItem="gad-Ni-I7v" secondAttribute="bottom" constant="37" id="pYz-nN-YeA"/>
                             <constraint firstItem="CzP-H4-ZEZ" firstAttribute="top" secondItem="11q-je-ZcS" secondAttribute="bottom" constant="20" id="pm9-yq-qbu"/>
                             <constraint firstItem="RVW-pq-Jg7" firstAttribute="width" secondItem="1ja-aG-HWl" secondAttribute="width" id="sGM-Lk-kmq"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="button1" destination="CzP-H4-ZEZ" id="2V8-lS-j1B"/>
+                        <outlet property="buttonScroll" destination="bXy-D1-7Ep" id="8vz-iv-gVl"/>
                         <outlet property="label1" destination="gad-Ni-I7v" id="mX3-ze-XrY"/>
                     </connections>
                 </viewController>
